a1/brendan_gordon/TEST_PROGRAMS/valid_programs/strings.min
var s: string;
read s;

print -s;
print s+s;
print s-s;
