a1/brendan_gordon/TEST_PROGRAMS/invalidtype/prabhjot_sandhu/redeclared.min
var x:int;
var y:int;
var z:int;
var x:float;

read x;
read y;

z = x + y;
print z;

